// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pattern minimal deployment 1`] = `
Object {
  "Parameters": Object {
    "AssetParametersaadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04ArtifactHashC173448A": Object {
      "Description": "Artifact hash for asset \\"aadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04\\"",
      "Type": "String",
    },
    "AssetParametersaadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04S3Bucket4BA63B65": Object {
      "Description": "S3 bucket for asset \\"aadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04\\"",
      "Type": "String",
    },
    "AssetParametersaadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04S3VersionKey03140123": Object {
      "Description": "S3 key for asset version \\"aadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "GlueJobRolePolicy422D4F2E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:DescribeStreamSummary",
                "kinesis:GetRecords",
                "kinesis:GetShardIterator",
                "kinesis:ListShards",
                "kinesis:SubscribeToShard",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "testkinesisstreamslambdaKinesisStream374D6D56",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GlueJobRolePolicy422D4F2E",
        "Roles": Array [
          Object {
            "Fn::Select": Array [
              1,
              Object {
                "Fn::Split": Array [
                  "/",
                  Object {
                    "Fn::Select": Array [
                      5,
                      Object {
                        "Fn::Split": Array [
                          ":",
                          Object {
                            "Fn::GetAtt": Array [
                              "JobRole014917C6",
                              "Arn",
                            ],
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JobRole014917C6": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "glue.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Service role that Glue custom ETL jobs will assume for exeuction",
      },
      "Type": "AWS::IAM::Role",
    },
    "testkinesisstreamslambdaETLJob44B50676": Object {
      "Properties": Object {
        "Command": Object {
          "Name": "testJob",
          "PythonVersion": "3",
          "ScriptLocation": Object {
            "Fn::Join": Array [
              "",
              Array [
                "s3://",
                Object {
                  "Ref": "AssetParametersaadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04S3Bucket4BA63B65",
                },
                "/",
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersaadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04S3VersionKey03140123",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersaadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04S3VersionKey03140123",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Role": Object {
          "Fn::GetAtt": Array [
            "JobRole014917C6",
            "Arn",
          ],
        },
        "SecurityConfiguration": "testSecConfig",
      },
      "Type": "AWS::Glue::Job",
    },
    "testkinesisstreamslambdaKinesisStream374D6D56": Object {
      "Properties": Object {
        "RetentionPeriodHours": 24,
        "ShardCount": 1,
        "StreamEncryption": Object {
          "EncryptionType": "KMS",
          "KeyId": "alias/aws/kinesis",
        },
      },
      "Type": "AWS::Kinesis::Stream",
    },
  },
}
`;

exports[`Test if existing Glue Job is provided 1`] = `
Object {
  "Parameters": Object {
    "AssetParametersaadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04ArtifactHashC173448A": Object {
      "Description": "Artifact hash for asset \\"aadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04\\"",
      "Type": "String",
    },
    "AssetParametersaadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04S3Bucket4BA63B65": Object {
      "Description": "S3 bucket for asset \\"aadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04\\"",
      "Type": "String",
    },
    "AssetParametersaadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04S3VersionKey03140123": Object {
      "Description": "S3 key for asset version \\"aadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "ExistingJob": Object {
      "Properties": Object {
        "Command": Object {
          "Name": "testJob",
          "PythonVersion": "3",
          "ScriptLocation": Object {
            "Fn::Join": Array [
              "",
              Array [
                "s3://",
                Object {
                  "Ref": "AssetParametersaadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04S3Bucket4BA63B65",
                },
                "/",
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersaadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04S3VersionKey03140123",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersaadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04S3VersionKey03140123",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Role": Object {
          "Fn::GetAtt": Array [
            "JobRole014917C6",
            "Arn",
          ],
        },
        "SecurityConfiguration": "testSecConfig",
      },
      "Type": "AWS::Glue::Job",
    },
    "GlueJobRolePolicy422D4F2E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:DescribeStreamSummary",
                "kinesis:GetRecords",
                "kinesis:GetShardIterator",
                "kinesis:ListShards",
                "kinesis:SubscribeToShard",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "testkinesisstreamslambdaKinesisStream374D6D56",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GlueJobRolePolicy422D4F2E",
        "Roles": Array [
          Object {
            "Fn::Select": Array [
              1,
              Object {
                "Fn::Split": Array [
                  "/",
                  Object {
                    "Fn::Select": Array [
                      5,
                      Object {
                        "Fn::Split": Array [
                          ":",
                          Object {
                            "Fn::GetAtt": Array [
                              "JobRole014917C6",
                              "Arn",
                            ],
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JobRole014917C6": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "glue.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Service role that Glue custom ETL jobs will assume for exeuction",
      },
      "Type": "AWS::IAM::Role",
    },
    "testkinesisstreamslambdaKinesisStream374D6D56": Object {
      "Properties": Object {
        "RetentionPeriodHours": 24,
        "ShardCount": 1,
        "StreamEncryption": Object {
          "EncryptionType": "KMS",
          "KeyId": "alias/aws/kinesis",
        },
      },
      "Type": "AWS::Kinesis::Stream",
    },
  },
}
`;

exports[`When S3 bucket location for script exists 1`] = `
Object {
  "Resources": Object {
    "GlueJobRolePolicy422D4F2E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:DescribeStreamSummary",
                "kinesis:GetRecords",
                "kinesis:GetShardIterator",
                "kinesis:ListShards",
                "kinesis:SubscribeToShard",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "testkinesisstreamslambdaKinesisStream374D6D56",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GlueJobRolePolicy422D4F2E",
        "Roles": Array [
          Object {
            "Fn::Select": Array [
              1,
              Object {
                "Fn::Split": Array [
                  "/",
                  Object {
                    "Fn::Select": Array [
                      5,
                      Object {
                        "Fn::Split": Array [
                          ":",
                          Object {
                            "Fn::GetAtt": Array [
                              "JobRole014917C6",
                              "Arn",
                            ],
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JobRole014917C6": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "glue.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Service role that Glue custom ETL jobs will assume for exeuction",
      },
      "Type": "AWS::IAM::Role",
    },
    "ScriptLocation6396DB53": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "testkinesisstreamslambdaETLJob44B50676": Object {
      "Properties": Object {
        "Command": Object {
          "Name": "testJob",
          "PythonVersion": "3",
          "ScriptLocation": Object {
            "Fn::Join": Array [
              "",
              Array [
                "s3://",
                Object {
                  "Ref": "ScriptLocation6396DB53",
                },
                "/dummyfile.py",
              ],
            ],
          },
        },
        "Role": Object {
          "Fn::GetAtt": Array [
            "JobRole014917C6",
            "Arn",
          ],
        },
        "SecurityConfiguration": "testSecConfig",
      },
      "Type": "AWS::Glue::Job",
    },
    "testkinesisstreamslambdaKinesisStream374D6D56": Object {
      "Properties": Object {
        "RetentionPeriodHours": 24,
        "ShardCount": 1,
        "StreamEncryption": Object {
          "EncryptionType": "KMS",
          "KeyId": "alias/aws/kinesis",
        },
      },
      "Type": "AWS::Kinesis::Stream",
    },
  },
}
`;

exports[`create glue job with existing kinesis stream 1`] = `
Object {
  "Parameters": Object {
    "AssetParametersaadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04ArtifactHashC173448A": Object {
      "Description": "Artifact hash for asset \\"aadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04\\"",
      "Type": "String",
    },
    "AssetParametersaadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04S3Bucket4BA63B65": Object {
      "Description": "S3 bucket for asset \\"aadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04\\"",
      "Type": "String",
    },
    "AssetParametersaadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04S3VersionKey03140123": Object {
      "Description": "S3 key for asset version \\"aadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "GlueJobRolePolicy422D4F2E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:DescribeStreamSummary",
                "kinesis:GetRecords",
                "kinesis:GetShardIterator",
                "kinesis:ListShards",
                "kinesis:SubscribeToShard",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "KinesisStream46752A3E",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GlueJobRolePolicy422D4F2E",
        "Roles": Array [
          Object {
            "Fn::Select": Array [
              1,
              Object {
                "Fn::Split": Array [
                  "/",
                  Object {
                    "Fn::Select": Array [
                      5,
                      Object {
                        "Fn::Split": Array [
                          ":",
                          Object {
                            "Fn::GetAtt": Array [
                              "JobRole014917C6",
                              "Arn",
                            ],
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JobRole014917C6": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "glue.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Service role that Glue custom ETL jobs will assume for exeuction",
      },
      "Type": "AWS::IAM::Role",
    },
    "KinesisStream46752A3E": Object {
      "Properties": Object {
        "RetentionPeriodHours": 24,
        "ShardCount": 1,
        "StreamEncryption": Object {
          "EncryptionType": "KMS",
          "KeyId": "alias/aws/kinesis",
        },
      },
      "Type": "AWS::Kinesis::Stream",
    },
    "existingStreamJobETLJob50478D3D": Object {
      "Properties": Object {
        "Command": Object {
          "Name": "JobCommand",
          "PythonVersion": "3",
          "ScriptLocation": Object {
            "Fn::Join": Array [
              "",
              Array [
                "s3://",
                Object {
                  "Ref": "AssetParametersaadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04S3Bucket4BA63B65",
                },
                "/",
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersaadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04S3VersionKey03140123",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersaadae4f8295412f3987d803069cad69f367436321959fe2150012ee106bd6c04S3VersionKey03140123",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Role": Object {
          "Fn::GetAtt": Array [
            "JobRole014917C6",
            "Arn",
          ],
        },
        "SecurityConfiguration": "ETLJobSecurityConfig",
      },
      "Type": "AWS::Glue::Job",
    },
    "existingStreamJobGlueSecurityConfig88E060CD": Object {
      "Properties": Object {
        "EncryptionConfiguration": Object {
          "CloudWatchEncryption": Object {
            "CloudWatchEncryptionMode": "SSE-KMS",
            "KmsKeyArn": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "arn:",
                  Object {
                    "Ref": "AWS::Partition",
                  },
                  ":kms:",
                  Object {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  Object {
                    "Ref": "AWS::AccountId",
                  },
                  ":alias/aws/glue",
                ],
              ],
            },
          },
          "JobBookmarksEncryption": Object {
            "JobBookmarksEncryptionMode": "CSE-KMS",
            "KmsKeyArn": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "arn:",
                  Object {
                    "Ref": "AWS::Partition",
                  },
                  ":kms:",
                  Object {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  Object {
                    "Ref": "AWS::AccountId",
                  },
                  ":alias/aws/glue",
                ],
              ],
            },
          },
          "S3Encryptions": Array [
            Object {
              "S3EncryptionMode": "SSE-S3",
            },
          ],
        },
        "Name": "ETLJobSecurityConfig",
      },
      "Type": "AWS::Glue::SecurityConfiguration",
    },
  },
}
`;
